# glider-kitchen

./: .pre-commit-config.yaml  Cargo.toml  README.md  config.toml  table.toml
.github/workflows/: build-test.yml  pre-commit.yml  publish-ui.yml  semantic-pr.yml
glider-kitchen/: Cargo.toml  index.html
glider-kitchen-ai/: Cargo.toml
glider-kitchen-ai/src/: lib.rs
glider-kitchen-ui/: Cargo.toml  Trunk.toml
glider-kitchen-ui/assets/: manifest.json  sw.js
glider-kitchen-ui/src/: app.rs  lib.rs  main.rs
glider-kitchen/assets/: sw.js
glider-kitchen/src/: app.rs  lib.rs  main.rs
