[package]
name = "glider-kitchen-ai"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35