[package]
name = "glider-kitchen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glider-kitchen-ai = { path = "../glider-kitchen-ai" }
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
env_logger = "0.10"
rfd = "0.12.0"
