[package]
name = "glider-kitchen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glider-kitchen-ai = { path = "../glider-kitchen-ai" }
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
] }
env_logger = "0.11.8"
rfd = "0.15.4"
log = "0.4.27"
