[package]
name = "glider-kitchen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glider-kitchen-ai = { path = "../glider-kitchen-ai" }
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "android-native-activity",
] }
env_logger = "0.11.8"
rfd = "0.15.4"
log = "0.4.27"
async-std = "1.13.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[target.'cfg(android)'.dependencies]
android_logger = "0.15.1"

[package.metadata.android]
#build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35